--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Ivandi Djoh Gah",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.3.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1"
