--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.3.0",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.14",
